--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -58,32 +58,32 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 108 Agenda for 9/12</h1>
+    <h1>GDWD 108 Agenda for 9/13</h1>
     <div id="agenda">
       <h2>Announcements (8:05)</h2>
       <h3>(if you're not here by 8:10, you're tardy!)</h3>
-      <h2>Period 1 (8:10-8:50): Expectations, Surveys, and Quiz</h2>
-      <h2>Period 2 (9:00-9:50): Document Flow and the Box Model</h2>
-      <h2>Period 3 (10:10-11:50): Navbar Assignment</h2>
+      <h2>Period 1 (8:10-8:50): Review of HTML and CSS syntax, plus Kahoot</h2>
+      <h2>Period 2 (9:00-9:50): Assignment 2 Dejavu Demo</h2>
+      <h2>Period 3 (10:10-11:50): Demo (cont.) and Media Queries?</h2>
       <h2>Period 4 (12:10pm-1pm): Lab Time</h2>
     </div>
 
-    <!-- <h1>Assignments, Deliverables &amp; More</h1>
+    <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
-      <h2 class="assnItem highlight">
-        <span>Project Turn-in (Photoshop/InDesign)</span>
-        <span>Due tonight</span>
+      <h2 class="assnItem warning">
+        <span>Assignment 1 - Navbar</span>
+        <span>Due yesterday</span>
       </h2>
       <h2 class="assnItem highlight">
-        <span>Process Blog Turn-in (Photoshop/InDesign)</span>
-        <span>Due tonight</span>
+        <span>Assignment 2 - Sticky Bars & Icons</span>
+        <span>Due today</span>
       </h2>
       <h2 class="assnItem highlight">
-        <span>Planning Assignment (AfterEffects/UI/UX)</span>
-        <span>Due tonight</span>
+        <span>Navbar Lab Part 1</span>
+        <span>Due today</span>
       </h2>
     </div>
-
+    <!--
     <h1>Coming Soon</h1>
     <div id="agenda">
       <div class="agendaItem done">
