--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -58,29 +58,33 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 108 Agenda for 9/13</h1>
+    <h1>GDWD 108 Agenda for 9/14</h1>
     <div id="agenda">
       <h2>Announcements (8:05)</h2>
       <h3>(if you're not here by 8:10, you're tardy!)</h3>
-      <h2>Period 1 (8:10-8:50): Review of HTML and CSS syntax, plus Kahoot</h2>
-      <h2>Period 2 (9:00-9:50): Assignment 2 Dejavu Demo</h2>
-      <h2>Period 3 (10:10-11:50): Demo (cont.) and Media Queries?</h2>
+      <h2>Period 1 (8:10-8:50): Review Kahoot(s)</h2>
+      <h2>Period 2 (9:00-9:50): Intro to Flexbox and Media Queries</h2>
+      <h2>Period 3 (10:10-11:50): Dejavu Demo for Assignment 3</h2>
       <h2>Period 4 (12:10pm-1pm): Lab Time</h2>
     </div>
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
       <h2 class="assnItem warning">
-        <span>Assignment 1 - Navbar</span>
+        <span>Assignment 2 - Sticky Bars & Icons</span>
         <span>Due yesterday</span>
       </h2>
       <h2 class="assnItem highlight">
-        <span>Assignment 2 - Sticky Bars & Icons</span>
+        <span>Assignment 3 - Flexbox and Responsiveness</span>
         <span>Due today</span>
       </h2>
-      <h2 class="assnItem highlight">
-        <span>Navbar Lab Part 1</span>
-        <span>Due today</span>
+      <h2 class="assnItem warning">
+        <span>Lab 1 - Navbar (Part 1)</span>
+        <span>Due yesterday</span>
+      </h2>
+      <h2 class="assnItem">
+        <span>Lab 1 - Navbar (Part 2)</span>
+        <span>Due tomorrow</span>
       </h2>
     </div>
     <!--
