--- a/examples/rockpaperscissors/part3/game_v3.html
+++ b/examples/rockpaperscissors/part3/game_v3.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <title>Rock Paper Scissors</title>
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style_v3.css" rel="stylesheet">
   </head>
   <body>
     <h1>Rock, Paper, Scissors!</h1>
