--- a/examples/rockpaperscissors/part2/game_v2.html
+++ b/examples/rockpaperscissors/part2/game_v2.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <title>Rock Paper Scissors</title>
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style_v2.css" rel="stylesheet">
   </head>
   <body>
     <h1>Rock, Paper, Scissors!</h1>
@@ -21,6 +21,7 @@
       </div>
       <h3 id="selections">You picked <span id="yourPickText"></span>. I picked <span id="myPickText"></span>.</h3>
       <h2 id="result"></h2>
+      <h4>Refresh the page to play again!</h4>
     </div>
 
     <script src="js/logic.js"></script>
