--- a/assignments/108/108_Assignment4/index.html
+++ b/assignments/108/108_Assignment4/index.html
@@ -11,8 +11,12 @@
         <li id="home">
           <a href="#"><i class="fa-solid fa-house-chimney"></i></a>
         </li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <li>
+          <a href="#">About</a>
+        </li>
+        <li>
+          <a href="#">Contact</a>
+        </li>
         <li class="dropdownContainer">
           <a href="#">Dropdown Menu</a>
           <ul class="dropdownMenu">
