--- a/examples/responsivegrid/part1/index.html
+++ b/examples/responsivegrid/part1/index.html
@@ -8,7 +8,7 @@
   <body>
     <div id="siteGrid">
       <nav>
-        <h2>ALEX</h2>
+        <h2>YOUR NAME HERE</h2>
         <ul id="navLinks">
           <li><a href="#">Home</a></li>
           <li><a href="#">Portfolio</a></li>
@@ -16,7 +16,7 @@
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
-        <ul id="navSocialMedia">
+        <ul class="socialMedia">
           <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
           <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
           <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
@@ -24,7 +24,7 @@
         </ul>
       </nav>
       <footer>
-        <ul id="navSocialMedia">
+        <ul class="socialMedia">
           <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
           <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
           <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
