responsive grid assignment

--- a/examples/responsivegrid/index.html
+++ b/examples/responsivegrid/index.html
@@ -55,7 +55,7 @@
           <a href="#">Learn More</a>
         </div>
       </section>
-      <section id="gallery">
+      <section id="gallery1">
         <h2>Gallery will go here</h2>
       </section>
       <section id="twoCards">
