--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -62,25 +62,25 @@
     <div id="agenda">
       <h2>Announcements (8:05)</h2>
       <h3>(if you're not here by 8:10, you're tardy!)</h3>
-      <h2>Period 1 (8:10-8:50): Review Kahoot (CSS Selectors)</h2>
-      <h2>Period 2 (9:00-9:50): Intro to CSS Transitions</h2>
-      <h2>Period 3 (10:10-11:50): Dejavu Demo for Assignment 4</h2>
+      <h2>Period 1 (8:10-8:50): Lab Time (Assignment Revisions)</h2>
+      <h2>Period 2 (9:00-9:50): Intro to CSS Grid</h2>
+      <h2>Period 3 (10:10-11:50): Dejavu Demo for Assignment 5</h2>
       <h2>Period 4 (12:10pm-1pm): Lab Time</h2>
     </div>
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
-      <h2 class="assnItem warning">
-        <span>Assignment 3 - Flexbox and Responsiveness</span>
-        <span>Due yesterday</span>
-      </h2>
       <h2 class="assnItem highlight">
-        <span>Assignment 4 - Dropdown Menu</span>
+        <span>Assignment 5 - Responsive Grid</span>
         <span>Due today</span>
       </h2>
-      <h2 class="assnItem highlight">
-        <span>Lab 1 - Navbar (Part 2)</span>
-        <span>Due today</span>
+      <h2 class="assnItem">
+        <span>All Week 1 Assignment Revisions</span>
+        <span>Due Thursday at midnight</span>
+      </h2>
+      <h2 class="assnItem">
+        <span>107 Final Exam</span>
+        <span>Monday, Sept 26th</span>
       </h2>
     </div>
     <!--
