--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -58,25 +58,25 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 108 Agenda for 9/20 (Day 6)</h1>
+    <h1>GDWD 108 Agenda for 9/21 (Day 7)</h1>
     <div id="agenda">
       <h2>Announcements (8:05)</h2>
       <h3>(if you're not here by 8:10, you're tardy!)</h3>
-      <h2>Period 1 (8:10-8:50): Flex Review and Lab Time</h2>
-      <h2>Period 2 (9:00-9:50): Career Development Presentation</h2>
-      <h2>Period 3 (10:10-11:50): Dejavu Demo for Assignment 6</h2>
-      <h2>Period 4 (12:10pm-1pm): Dejavu (cont.) and Lab Time</h2>
+      <h2>Period 1 (8:10-8:50): Lab Time</h2>
+      <h2>Period 2 (9:00-9:50): Dejavu Demo for Assignment 7</h2>
+      <h2>Period 3 (10:10-11:50): Dejavu (cont.)</h2>
+      <h2>Period 4 (12:10pm-1pm): Lab Time</h2>
     </div>
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
-      <h2 class="assnItem warning">
-        <span>Assignment 5 - Responsive Grid</span>
-        <span>Due yesterday</span>
-      </h2>
       <h2 class="assnItem highlight">
         <span>Assignment 6 - Responsive Heroes/Cards</span>
-        <span>Due today</span>
+        <span>Due today at 9am</span>
+      </h2>
+      <h2 class="assnItem highlight">
+        <span>Assignment 7 - Five Galleries</span>
+        <span>Due today at 2pm</span>
       </h2>
       <h2 class="assnItem">
         <span>All Week 1 Assignment Revisions</span>
@@ -90,7 +90,7 @@
 
     <h1>Late Policy</h1>
     <div id="agenda">
-      <h2>Assignments Due at 2pm</h2>
+      <h2>Assignments Due each day at 2pm</h2>
       <h2>Late Turn-in: 21% off</h2>
       <h2>
         Last Day to Turn-in Assignments:
