--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -63,7 +63,7 @@
       <h2>Announcements (8:05)</h2>
       <h3>(if you're not here by 8:10, you're tardy!)</h3>
       <h2>Period 1 (8:10-8:50): Lab Time</h2>
-      <h2>Period 2 (9:00-9:50): Dejavu Demo for Assignment 7</h2>
+      <h2>Period 2 (9:00-9:50): 107 Final Exam Review Kahoot &amp;<br> Dejavu Demo for Assignment 8</h2>
       <h2>Period 3 (10:10-11:50): Dejavu (cont.)</h2>
       <h2>Period 4 (12:10pm-1pm): Lab Time</h2>
     </div>
@@ -71,18 +71,22 @@
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
       <h2 class="assnItem highlight">
-        <span>Assignment 6 - Responsive Heroes/Cards</span>
+        <span>Assignment 7 - Five Galleries</span>
         <span>Due today at 9am</span>
       </h2>
       <h2 class="assnItem highlight">
-        <span>Assignment 7 - Five Galleries</span>
+        <span>Assignment 8 - Bootstrap Carousel</span>
         <span>Due today at 2pm</span>
       </h2>
-      <h2 class="assnItem">
-        <span>All Week 1 Assignment Revisions</span>
-        <span>Due Thursday at midnight</span>
+      <h2 class="assnItem highlight">
+        <span>Lab 2 - Responsive Portfolio Site</span>
+        <span>Due today at 2pm</span>
       </h2>
-      <h2 class="assnItem">
+      <h2 class="assnItem warning">
+        <span>All Week 1 Assignment Revisions</span>
+        <span>Due tonight at midnight</span>
+      </h2>
+      <h2 class="assnItem highlight">
         <span>107 Final Exam | Final Eval</span>
         <span>Monday, Sept 26th</span>
       </h2>
