--- a/index.html
+++ b/index.html
@@ -58,6 +58,42 @@
       </div>
 
       <div class="portfolio">
+        <a href="https://demondtwyman.github.io/portfolio/" target="_blank">
+          Demond's Portfolio
+        </a>
+        <a href="https://github.com/DemondTwyman/portfolio" target="_blank">
+          Demond's Repository
+        </a>
+      </div>
+
+      <div class="portfolio">
+        <a href="https://jggithub16.github.io/" target="_blank">
+          Jules's Portfolio
+        </a>
+        <a href="https://github.com/JGGithub16/JGGithub16.github.io" target="_blank">
+          Jules's Repository
+        </a>
+      </div>
+
+      <div class="portfolio">
+        <a href="https://leilani1218.github.io/Leilani1218.github.io-/" target="_blank">
+          Leilani's Portfolio
+        </a>
+        <a href="https://github.com/leilani1218/Leilani1218.github.io-" target="_blank">
+          Leilani's Repository
+        </a>
+      </div>
+
+      <div class="portfolio">
+        <a href="https://leon3242wlll.github.io/Leon3234wlll.github.io/" target="_blank">
+          Leon's Portfolio
+        </a>
+        <a href="https://github.com/Leon3242wlll/Leon3234wlll.github.io" target="_blank">
+          Leon's Repository
+        </a>
+      </div>
+
+      <div class="portfolio">
         <a href="https://leowill25.github.io/portfolio/" target="_blank">
           Leonard's Portfolio
         </a>
@@ -67,11 +103,20 @@
       </div>
 
       <div class="portfolio">
-        <a href="" target="_blank">
-          Lovinski's Portfolio (x)
+        <a href="https://louietrouie.github.io/Portfolio-first_LovenskiJean/" target="_blank">
+          Lovinski's Portfolio
         </a>
-        <a href="https://github.com/LouieTrouie" target="_blank">
-          Lovinski's Repository?
+        <a href="https://github.com/LouieTrouie/Portfolio-first_LovenskiJean/tree/main/Assigments.html" target="_blank">
+          Lovinski's Repository
+        </a>
+      </div>
+
+      <div class="portfolio">
+        <a href="https://que22.github.io/Portfolio-first/" target="_blank">
+          Q's Portfolio
+        </a>
+        <a href="https://github.com/Que22/Portfolio-first" target="_blank">
+          Q's Repository
         </a>
       </div>
 
