--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
   <head>
     <title>107 PORTFOLIO NEXUS</title>
     <style>
+      body {
+        text-align: center;
+      }
       .root {
         font-family: Verdana, sans-serif;
         text-align: center;
+        columns: 3 auto;
       }
       .portfolio {
         display: inline-block;
@@ -21,15 +25,24 @@
         padding: 12px;
         width: 42%;
       }
+      @media screen and (max-width: 1300px) {
+        .root {
+          columns: 2 auto;
+        }
+      }
+      @media screen and (max-width: 800px) {
+        .root {
+          columns: 1 auto;
+        }
+      }
     </style>
   </head>
   <body>
+    <h1>Portfolio Nexus</h1>
+    <h2>
+      These are the Portfolios and Repositories of my wonderful students!
+    </h2>
     <div class="root">
-      <h1>Portfolio Nexus</h1>
-      <h2>
-        These are the Portfolios and Repositories of my wonderful students!
-      </h2>
-
       <div class="portfolio">
         <a href="https://akimah.github.io/Portfolio/" target="_blank">
           Akimah's Portfolio
