--- a/assignments/108/pantheon_setup.html
+++ b/assignments/108/pantheon_setup.html
@@ -14,28 +14,28 @@
   </head>
   <body>
     <h1>GDWD 108 Pantheon Setup</h1>
-    <h2>Jump to...</h2>
+    <!-- <h2>Jump to...</h2>
     <ul>
       <li><a href="#part1">Part 1 - Setting up Pantheon and your first (live) WordPress site</a></li>
       <li><a href="#part2">Part 2 - Creating a second WordPress site on Patheon for the AHR project.</a></li>
       <li><a href="#part3">Part 3 (optional) - Importing your WordPress site from MAMP</a></li>
-    </ul>
-    <h2 id="part1">Setting up Pantheon and your first (live) WordPress site</h2>
+    </ul> -->
+    <h2 id="part1">Setting up Pantheon and your first WordPress site</h2>
     <ol>
-      <li><a href="https://pantheon.io/register">Create an account for Pantheon here.</a></li>
+      <li><a href="https://pantheon.io/register">Create an account for Pantheon here.</a> (Make sure to use your school email address!)</li>
       <li>Set up your new Pantheon site, by following the instructions as in the screenshots below.</li>
       <li>
-        Select "Start a New Project"
+        Select "Create New Site"
         <br>
-        <img src="../../images/assignments/108/Pantheon/01.png">
+        <img src="assets/assn9/01.png">
+      </li>
+      <li>
+        <p>Under "What kind of site are you creating?", select WordPress.</p>
+        <img src="assets/assn9/02.png">
       </li>
       <li>
         <p>Provide a name for your Pantheon site (this will go in the URL).</p>
-        <img src="../../images/assignments/108/Pantheon/02.png">
-      </li>
-      <li>
-        <p>Click Continue, and then click Deploy for WordPress.</p>
-        <img src="../../images/assignments/108/Pantheon/03.png">
+        <img src="assets/assn9/03.png">
       </li>
       <li>
         <p>It will take a few minutes to install WordPress on Pantheon.</p>
@@ -46,12 +46,24 @@
         <img src="../../images/assignments/108/Pantheon/05.png">
       </li>
       <li>
+        <p>Once on the Pantheon Dashboard, click the "Site Admin" button to begin installing WordPress</p>
+        <img src="assets/assn9/06.png">
+      </li>
+      <li>
         <p>Now, you'll go through the familiar WordPress setup. Select English, and then click Continue.</p>
         <img src="../../images/assignments/108/Pantheon/06.png">
       </li>
       <li>
         <p>Provide the WordPress Site Title, your preferred Username and Password, and an email address for password recovery. If you want your website to be accessible to search engines, check the box at the bottom.  Then click Install WordPress.</p>
         <img src="../../images/assignments/108/Pantheon/07.png">
+      </li>
+      <li>
+        <p>After WordPress has been installed, click the "Log In" button</p>
+        <img src="assets/assn9/07.png">
+      </li>
+      <li>
+        <p>Then fill out your username and password to log in to WordPress (for real this time)</p>
+        <img src="assets/assn9/08.png">
       </li>
       <li>
         <p>Afterward, you should be directed to the WordPress dashboard.</p>
@@ -61,7 +73,7 @@
         Congrats! You set up your first WordPress site that is live on the web.
       </li>
     </ol>
-    <h2 id="part2">Creating a second WordPress site on Patheon for the AHR project.</h2>
+    <!-- <h2 id="part2">Creating a second WordPress site on Pantheon for the AHR project.</h2>
     <ol>
       <li>
         Navigate to the Pantheon Dashboard from your Pantheon Site Dashboard (distinct from the WordPress Dashboard), by clickingon your Username in the upper right corner, and clicking on My Dashboard.
@@ -85,7 +97,7 @@
     <p>AND you'll also need to re-upload all of your images to your Pantheon WordPress sites.</p>
     <ol>
       <li>Navigate to the MAMP WordPress Dashboard of the site you want to Export</li>
-      <li>In the sidenav, under Tools, click Export. Under "Choose What to Export", make sure "All content" is selected.  Then click Download Export File.
+      <li>In the sidenav, under Tools, click Export. Under "Choose What to Export", make sure "All content" is selected.  Then click Download Export File.<br>
         <img src="../../images/assignments/108/Pantheon/12.png">
       </li>
       <li>Remember where the export file was saved at.  It will be named something like "<i>sitename</i>.WordPress.2022-07-08.xml"</li>
@@ -105,6 +117,6 @@
       <li>After the upload and import, you'll see a status screen, describing what was imported. You will probably see a lot of messages about images being unable to be imported. That is to be expected.</li>
       <li>Upload all the images you used on the site you imported from (at least, for all the pages you want working), and replace all the broken images with images from the Media Library</li>
       <li>Congrats! You successfully imported a WordPress site from MAMP!</li>
-    </ol>
+    </ol> -->
   </body>
 </html>
