--- a/assignments/108/debugging/index.html
+++ b/assignments/108/debugging/index.html
@@ -1,46 +1,21 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
-    <title>108 Assignment 1 - Navbar</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8">
+    <meta name='viewport'
+        content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
+    <!-- Browser Tab Icon -->
+    <link rel="icon" href="../../Assets/MyIcon.JPG">
+    <!-- File Title & Link -->
+    <title>Assignment 3</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <nav id="navbar1">
+    <nav>
       <ul>
-        <li><a href="#"></a>Home</li>
-        <li><a href="#"></a>About</li>
-        <li><a href="#"></a>Contact</li>
-        <li>
-          <a href="#">
-            <i class="fa-solid fa-cart-shopping"></i>
-          </a>
-        </li>
+        <li id="home"><a href="../../Assignments/assignments.html"><i class="fa-solid fa-house"></i></a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
     </nav>
-    <nav id="navbar2">
-      <ul>
-        <li><a href="#"></a>Home</li>
-        <li><a href="#"></a>About</li>
-        <li><a href="#"></a>Contact</li>
-        <li>
-          <a href="#">
-            <i class="fa-solid fa-cart-shopping"></i>
-          </a>
-        </li>
-      </ul>
-    </nav>
-    <nav id="navbar3">
-      <ul>
-        <li><a href="#"></a>Home</li>
-        <li><a href="#"></a>About</li>
-        <li><a href="#"></a>Contact</li>
-        <li>
-          <a href="#">
-            <i class="fa-solid fa-cart-shopping"></i>
-          </a>
-        </li>
-      </ul>
-    </nav>
-  </body>
-</html>
