--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -58,37 +58,25 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 108 Agenda for 9/21 (Day 7)</h1>
+    <h1>GDWD 108 Agenda for 9/26 (Day 9)</h1>
     <div id="agenda">
       <h2>Announcements (8:05)</h2>
       <h3>(if you're not here by 8:10, you're tardy!)</h3>
-      <h2>Period 1 (8:10-8:50): Lab Time</h2>
-      <h2>Period 2 (9:00-9:50): 107 Final Exam Review Kahoot &amp;<br> Dejavu Demo for Assignment 8</h2>
-      <h2>Period 3 (10:10-11:50): Dejavu (cont.)</h2>
-      <h2>Period 4 (12:10pm-1pm): Lab Time</h2>
+      <h2>Period 1 (8:10-8:50): Final Exam Kahoot #2 | LockDown Browser</h2>
+      <h2>Period 2 (9:00-9:50): Final Exam</h2>
+      <h2>Period 3 (10:10-11:50): Final Exam | Final Eval</h2>
+      <h2>Period 4 (12:10pm-1pm): Final Eval</h2>
     </div>
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
       <h2 class="assnItem highlight">
-        <span>Assignment 7 - Five Galleries</span>
-        <span>Due today at 9am</span>
-      </h2>
-      <h2 class="assnItem highlight">
-        <span>Assignment 8 - Bootstrap Carousel</span>
-        <span>Due today at 2pm</span>
-      </h2>
-      <h2 class="assnItem highlight">
-        <span>Lab 2 - Responsive Portfolio Site</span>
-        <span>Due today at 2pm</span>
-      </h2>
-      <h2 class="assnItem warning">
-        <span>All Week 1 Assignment Revisions</span>
-        <span>Due tonight at midnight</span>
-      </h2>
-      <h2 class="assnItem highlight">
         <span>107 Final Exam | Final Eval</span>
-        <span>Monday, Sept 26th</span>
+        <span>Today</span>
+      </h2>
+      <h2 class="assnItem highlight">
+        <span>All Week 2 Assignment Revisions</span>
+        <span>Due Thursday at midnight</span>
       </h2>
     </div>
 
