--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -58,21 +58,25 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 108 Agenda for 9/26 (Day 9)</h1>
+    <h1>GDWD 108 Agenda for 9/27 (Day 10)</h1>
     <div id="agenda">
       <h2>Announcements (8:05)</h2>
       <h3>(if you're not here by 8:10, you're tardy!)</h3>
-      <h2>Period 1 (8:10-8:50): Final Exam Kahoot #2 | LockDown Browser</h2>
-      <h2>Period 2 (9:00-9:50): Final Exam</h2>
-      <h2>Period 3 (10:10-11:50): Final Exam | Final Eval</h2>
-      <h2>Period 4 (12:10pm-1pm): Final Eval</h2>
+      <h2>Period 1 (8:10-8:50): Lab Time (Week 2 Revisions)</h2>
+      <h2>Period 2 (9:00-9:50): Assignment 9 (Pantheon Setup)</h2>
+      <h2>Period 3 (10:10-11:50): Assignment 9 (WordPress Intro)</h2>
+      <h2>Period 4 (12:10pm-1pm): Lab Time</h2>
     </div>
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
-      <h2 class="assnItem highlight">
+      <h2 class="assnItem warning">
         <span>107 Final Exam | Final Eval</span>
-        <span>Today</span>
+        <span>Yesterday</span>
+      </h2>
+      <h2 class="assnItem highlight">
+        <span>Assignment 9</span>
+        <span>Today at 2pm</span>
       </h2>
       <h2 class="assnItem highlight">
         <span>All Week 2 Assignment Revisions</span>
