--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -58,32 +58,36 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 108 Agenda for 10/4 (Day 12)</h1>
+    <h1>GDWD 108 Agenda for 10/5 (Day 13/14)</h1>
     <div id="agenda">
       <h2>Announcements (8:05)</h2>
       <h3>(if you're not here by 8:10, you're tardy!)</h3>
-      <h2>Period 1 (8:10-8:50): Plugins (Forms)</h2>
-      <h2>Period 2 (9:00-9:50): Content Writing vs Copywriting</h2>
-      <h2>Period 3 (10:10-11:50): Lab Time (Assignment 12 and Lab 3)</h2>
-      <h2>Period 4 (12:10pm-1pm): Lab Time (Assignment 12 and Lab 3)</h2>
+      <h2>Period 1 (8:10-8:50): Custom CSS</h2>
+      <h2>Period 2 (9:00-9:50): Assignment 14 Setup</h2>
+      <h2>Period 3 (10:10-11:50): Lab Time (Assignment 14)</h2>
+      <h2>Period 4 (12:10pm-1pm): Lab Time (Assignment 14)</h2>
     </div>
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
       <h2 class="assnItem warning">
-        <span>Assignment 10 (Intro To Portfolio Writing)</span>
-        <span>Yesterday</span>
-      </h2>
-      <h2 class="assnItem highlight">
         <span>Assignment 11 (Contact Form Plugin)</span>
-        <span>Today at 2pm</span>
+        <span>Yesterday at 2pm</span>
       </h2>
-      <h2 class="assnItem highlight">
+      <h2 class="assnItem warning">
         <span>Assignment 12 (Portfolio Writing II)</span>
+        <span>Yesterday at 2pm</span>
+      </h2>
+      <h2 class="assnItem warning">
+        <span>Lab 3 - Portfolio Foundation</span>
+        <span>Yesterday at 2pm</span>
+      </h2>
+      <h2 class="assnItem highlight">
+        <span>Assignment 13 (Custom CSS)</span>
         <span>Today at 2pm</span>
       </h2>
       <h2 class="assnItem highlight">
-        <span>Lab 3 - Portfolio Foundation</span>
+        <span>Assignment 14 (E-Commerce Site Part 1)</span>
         <span>Today at 2pm</span>
       </h2>
       <h2 class="assnItem highlight">
