--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -78,7 +78,11 @@
         <span>Assignment 14 (E-Commerce Site Part 1)</span>
         <span>Today at 2pm</span>
       </h2>
-      <h2 class="assnItem highlight">
+      <h2 class="assnItem">
+        <span>Assignment 15 (E-Commerce Site Part 2)</span>
+        <span>Monday at 2pm</span>
+      </h2>
+      <h2 class="assnItem warning">
         <span>All Week 2/3 Assignment Revisions</span>
         <span>Due Tonight at midnight</span>
       </h2>
