--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -58,29 +58,33 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 108 Agenda for 10/10 (Day 16)</h1>
+    <h1>GDWD 108 Agenda for 10/11 (Day 17)</h1>
     <div id="agenda">
       <h2>Announcements (8:05)</h2>
       <h3>(if you're not here by 8:10, you're tardy!)</h3>
-      <h2>Period 1 (8:10-8:50): Lab Time (Assignment 15 | Lab 4)</h2>
-      <h2>Period 2 (9:00-9:50): Lab Time (Assignment 15 | Lab 4)</h2>
-      <h2>Period 3 (10:10-11:50): Lab Time (Assignment 15 | Lab 4)</h2>
-      <h2>Period 4 (12:10pm-1pm): Lab Time (Assignment 15 | Lab 4)</h2>
+      <h2>Period 1 (8:10-8:50): Lab Time (Assignment 16)</h2>
+      <h2>Period 2 (9:00-9:50): Lab Time (Assignment 16)</h2>
+      <h2>Period 3 (10:10-11:50): Progress Bar Demo | Lab Time (Assignment 17)</h2>
+      <h2>Period 4 (12:10pm-1pm): Lab Time (Assignment 17)</h2>
     </div>
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
-      <h2 class="assnItem warning">
-        <span>Assignment 14 (E-Commerce Site Part 1)</span>
-        <span>Last Thursday at 2pm</span>
-      </h2>
       <h2 class="assnItem highlight">
         <span>Assignment 15 (E-Commerce Site Part 2)</span>
-        <span>Monday at 2pm</span>
+        <span>Yesterday at 2pm</span>
       </h2>
       <h2 class="assnItem highlight">
         <span>Lab 4 (E-Commerce Site Submission)</span>
-        <span>Monday at 2pm</span>
+        <span>Yesterday at 2pm</span>
+      </h2>
+      <h2 class="assnItem highlight">
+        <span>Assignment 16 (Portfolio Writing III)</span>
+        <span>Today at 2pm</span>
+      </h2>
+      <h2 class="assnItem highlight">
+        <span>Assignment 17 (Final "About" Page)</span>
+        <span>Today at 2pm</span>
       </h2>
       <h2 class="assnItem warning">
         <span>Revisions for Assignment 10 - 14 &amp; Lab 3</span>
