--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -58,35 +58,39 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 108 Agenda for 10/11 (Day 17)</h1>
+    <h1>GDWD 108 Agenda for 10/12 (Day 19)</h1>
     <div id="agenda">
       <h2>Announcements (8:05)</h2>
       <h3>(if you're not here by 8:10, you're tardy!)</h3>
-      <h2>Period 1 (8:10-8:50): Lab Time (Assignment 16)</h2>
-      <h2>Period 2 (9:00-9:50): Lab Time (Assignment 16)</h2>
-      <h2>Period 3 (10:10-11:50): Progress Bar Demo | Lab Time (Assignment 17)</h2>
-      <h2>Period 4 (12:10pm-1pm): Lab Time (Assignment 17)</h2>
+      <h2>Period 1 (8:10-8:50): Portfolio Considerations</h2>
+      <h2>Period 2 (9:00-9:50): WordPress Kahoot &amp; Quiz #1</h2>
+      <h2>Period 3 (10:10-11:50): Slider Demo | Lab Time (Assignment 18 &amp; 19)</h2>
+      <h2>Period 4 (12:10pm-1pm): Lab Time (Assignment 18 &amp; 19)</h2>
     </div>
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
-      <h2 class="assnItem highlight">
-        <span>Assignment 15 (E-Commerce Site Part 2)</span>
-        <span>Yesterday at 2pm</span>
-      </h2>
-      <h2 class="assnItem highlight">
-        <span>Lab 4 (E-Commerce Site Submission)</span>
-        <span>Yesterday at 2pm</span>
-      </h2>
-      <h2 class="assnItem highlight">
+      <h2 class="assnItem warning">
         <span>Assignment 16 (Portfolio Writing III)</span>
-        <span>Today at 2pm</span>
-      </h2>
-      <h2 class="assnItem highlight">
-        <span>Assignment 17 (Final "About" Page)</span>
-        <span>Today at 2pm</span>
+        <span>Yesterday at 2pm</span>
       </h2>
       <h2 class="assnItem warning">
+        <span>Assignment 17 (Finalized About Page)</span>
+        <span>Yesterday at 2pm</span>
+      </h2>
+      <h2 class="assnItem highlight">
+        <span>WordPress Quiz #1</span>
+        <span>Today</span>
+      </h2>
+      <h2 class="assnItem highlight">
+        <span>Assignment 18 (Finalized Contact Page)</span>
+        <span>Today at 2pm</span>
+      </h2>
+      <h2 class="assnItem highlight">
+        <span>Assignment 19 (Finalized Home Page)</span>
+        <span>Today at 2pm</span>
+      </h2>
+      <h2 class="assnItem">
         <span>Revisions for Assignment 10 - 14 &amp; Lab 3</span>
         <span>Due Thursday at midnight</span>
       </h2>
