--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -58,20 +58,28 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 108 Agenda for 10/17 (Day 21)</h1>
+    <h1>GDWD 108 Agenda for 10/18 (Day 22)</h1>
     <div id="agenda">
       <h2>Announcements (8:05)</h2>
       <h3>(if you're not here by 8:10, you're tardy!)</h3>
-      <h2>Period 1 (8:10-8:50): HTML Review Kahoot and Intro to JavaScript</h2>
-      <h2>Period 2 (9:00-9:50): JavaScript Variables and Functions</h2>
-      <h2>Period 3 (10:10-11:50): JavaScript Countdown Demo (Assignment 21)</h2>
-      <h2>Period 4 (12:10pm-1pm): Lab Time (Assignment 21)</h2>
+      <h2>Period 1 (8:10-8:50): JS Review Kahoot and Intro to Conditionals</h2>
+      <h2>Period 2 (9:00-9:50): Rock Paper Scissors Lab - Part 1</h2>
+      <h2>Period 3 (10:10-11:50): RPS Lab Pt 1 | Bouncing Ball Demo (Assignment 22)</h2>
+      <h2>Period 4 (12:10pm-1pm): Lab Time (RPS Lab Pt 1 | Assignment 21)</h2>
     </div>
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
+      <h2 class="assnItem warning">
+        <span>Assignment 21 (Countdown)</span>
+        <span>Yesterday at 2pm</span>
+      </h2>
       <h2 class="assnItem highlight">
-        <span>Assignment 21 (JavaScript Gallery)</span>
+        <span>Rock Paper Scissors Lab - Part 1</span>
+        <span>Today at 2pm</span>
+      </h2>
+      <h2 class="assnItem highlight">
+        <span>Assignment 22 (Bouncing Ball)</span>
         <span>Today at 2pm</span>
       </h2>
       <h2 class="assnItem">
